Attempt #1 to resolve Java 1.7 support